@@ -2,30 +2,34 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
-# check these on https://fabricmc.net/develop/
-minecraft_version = 1.20
-compatible_minecraft_versions = 1.20,1.20.1
+# check these on https://fabricmc.net/develop
+minecraft_version = 1.20.1
+compatible_minecraft_versions = 1.20.1
 loader_version = 0.14.21
 
 # Mod Properties
-mod_version = 4.2.2
+mod_version = 4.2.3
 maven_group = io.github.ignoramuses
 archives_base_name = BingBingWahoo
 
 # Mappings
 # https://lambdaurora.dev/tools/import_quilt.html
-qm_version = 4
+qm_version = 21
 
 # Dependencies
-fabric_version=0.83.0+1.20
+fabric_version=0.85.0+1.20.1
 # https://modrinth.com/mod/midnightlib
 midnightlib_version = 1.4.1-fabric
 
 # Compat
-# https://modrinth.com/mod/automobility/
+# https://modrinth.com/mod/automobility
 automobility_version = 0.4.2+1.20.1-fabric
 jsonem_version=0.2.1+1.20
-# https://github.com/emilyploszaj/trinkets/releases/
+# https://modrinth.com/mod/templates-2
+templates_version = 2.0.3-fabric-1.20.1
+# https://modrinth.com/mod/conventional-cubes
+conventional_cubes_version = 0.8.1+1.20.1
+# https://github.com/emilyploszaj/trinkets/releases
 trinkets_version = 3.7.0
 
 # Dev Env
